# yasqat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  changelog.html  demo.html  demo_showcase.ipynb  gap-report-2026-02-12.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  v0.3.2-hot-fixes.md  v0.3.2-tree-and-sun.md  yasqat-overview-en.html  yasqat-slides-en.html  yasqat-slides-script-en.md
.github/workflows/: deploy-docs.yml  docs.yml  publish.yml
.scratch/: README.md
.scratch/issues/: 01-om-subcost-matrix-bug.md  02-frequent-subsequences-enhancements.md  03-normative-indicators.md  04-compute-matrix-reference.md  05-encode-recode-states.md  06-statesequence-vs-pool-roles.md  07-freqtable-vs-subseqcount-docs.md  08-pitch-doc.md  09-v032-appendix-glossary.md  10-dhd-dispatch-gap.md  11-time-series-content.md  12-more-subsequence-mining.md  13-documentation-website.md  14-function-mind-map.md  15-distance-engine-prepare-seam.md  16-clustering-quality-placement.md  17-njobs-threadpool-gil.md
api/: clustering.html  core.html  index.html  io.html  metrics.html  statistics.html  visualization.html
docs/: Makefile  _quarto.yml  changelog.md  changelog.qmd  conf.py  demo.qmd  glossary.md  index.md  index.qmd  installation.md  quickstart.md  styles-dark.scss  styles.scss
docs/adr/: 0001-unified-statesequence-drop-visualization.md  0002-sequencepool-canonical-analysis-container.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/api/: clustering.md  clustering.qmd  core.md  core.qmd  filters.md  index.md  index.qmd  io.md  io.qmd  metrics.md  metrics.qmd  statistics.md  statistics.qmd  synthetic.md  visualization.qmd
docs/getting-started/: installation.qmd  quickstart.qmd
docs/plans/: 2026-02-23-pypi-publishing-plan.md  2026-03-04-documentation-design.md
docs/tutorials/: clustering.qmd  data-structures.qmd  distance.qmd  index.qmd  statistics.qmd  visualization.qmd
getting-started/: installation.html  quickstart.html
plans/: 2026-02-12-gap-report-tanat-traminer.md  2026-02-23-code-review-progress.md  2026-03-04-documentation-site.md  2026-03-09-implementation-plan.md  2026-03-09-slidev-and-writeup.md  2026-03-09-v0.3.1-upgrade.md
site_libs/bootstrap/: bootstrap-57bc3fd9d286b275f0841ad99410b31f.min.css  bootstrap-dark-e62b55d2ed6fc9f657f015241650c63c.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-dark-76e9311784a2ffbbddbf6b803fd759ce.css  quarto-syntax-highlighting-fbec926cc2468011e96a76fc8cefcada.css
src/yasqat/: __init__.py
tests/: __init__.py  conftest.py  test_integration.py
tests/test_clustering/: __init__.py  test_clara.py  test_hierarchical.py  test_pam.py  test_quality.py  test_representatives.py
tests/test_core/: test_alphabet.py  test_pool.py  test_sequence.py  test_trajectory.py
tests/test_filters/: __init__.py  test_criteria.py
tests/test_io/: __init__.py  test_loaders.py
tests/test_metrics/: test_base.py  test_chi2.py  test_dhd.py  test_dtw.py  test_euclidean.py  test_hamming.py  test_lcp.py  test_lcs.py  test_metric_classes.py  test_metric_exports.py  test_nms.py  test_om_variants.py  test_optimal_matching.py  test_rlcp.py  test_softdtw.py  test_twed.py
tests/test_statistics/: test_descriptive.py  test_discrepancy.py  test_disstree.py  test_normative.py  test_subsequence_mining.py  test_transition.py
tests/test_synthetic/: __init__.py  (+1 more)
tutorials/: clustering.html  data-structures.html  distance.html  index.html  statistics.html  visualization.html
(+52 files in other folders)
